# secure-agent-augmentation

./: .gitignore  LICENSE  README.md  install_postgresql.sh  notes.md  pyproject.toml  requirements.txt  run.sh  setup.sh
api/auth/: server.py
docker/: Dockerfile.admin_app  Dockerfile.api_server  Procfile  docker-compose.yml  supervisord_admin.conf
docs/: Creating_Keys_For_JWT_Signing.md
init/: init_db.sql
notebooks/: admin_and_client_demo.ipynb
oauth_client/: client.py
src/admin_app/: admin_api.py  app.py
src/api_server/: Procfile  config.py  constants.py  database.py  logging.py  logging_conf.py  main.py  middleware.py  models.py  oauth2_implementation.py  schemas.py  security.py  utils.py
src/api_server/admin/api/: endpoints.py
src/api_server/admin/gui/: endpoints.py
src/api_server/routers/: endpoints.py
src/api_server/routers/auth_testing/: endpoints.py
src/oauth_client/: client.py
