[project]
name = "secure-agent-augmentation"
version = "0.1.0"
description = "A scalable, secure framework for AI agents to interact with external systems"
authors = [
    {name = "Omer", email = "knail2@github.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "psycopg2>=2.9.9",
    "flask>=3.0.0",
    "uvicorn>=0.24.0",
    "streamlit>=1.28.2",
    "authlib>=1.2.1",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "requests>=2.31.0",
    "flask-talisman>=1.1.0",
    "jinja2>=3.1.2",
]
requires-python = ">=3.9,<3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "ruff>=0.1.5",
]